--- a/Woopons/CustomCells/RecentlyAddedTableCell.xib
+++ b/Woopons/CustomCells/RecentlyAddedTableCell.xib
@@ -27,23 +27,23 @@
                         <rect key="frame" x="10" y="10" width="339" height="199"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sfR-pv-GRh" customClass="RightCornerView" customModule="Woopons" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="206.33333333333334" height="132"/>
+                                <rect key="frame" x="10" y="10" width="222.33333333333334" height="132"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barcode" translatesAutoresizingMaskIntoConstraints="NO" id="mxZ-TM-sJY">
-                                        <rect key="frame" x="15" y="51" width="176.33333333333334" height="30"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barcode" translatesAutoresizingMaskIntoConstraints="NO" id="mxZ-TM-sJY">
+                                        <rect key="frame" x="15" y="51" width="192.33333333333334" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="c8y-GC-6Dw"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KFC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fK0-wc-6kf">
-                                        <rect key="frame" x="15" y="10" width="176.33333333333334" height="31"/>
+                                        <rect key="frame" x="15" y="10" width="192.33333333333334" height="31"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unlimited" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbb-LF-KgS">
-                                        <rect key="frame" x="15" y="102" width="176.33333333333334" height="20"/>
+                                        <rect key="frame" x="15" y="102" width="192.33333333333334" height="20"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -65,11 +65,11 @@
                                 </constraints>
                             </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xq6-iz-TOh" customClass="RightCornerView" customModule="Woopons" customModuleProvider="target">
-                                <rect key="frame" x="246.33333333333329" y="10" width="82.666666666666657" height="132"/>
+                                <rect key="frame" x="262.33333333333331" y="10" width="66.666666666666686" height="132"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOOD &amp; BEVERAGE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccc-hC-xFB">
-                                        <rect key="frame" x="9.9999999999999964" y="10" width="62.666666666666657" height="112"/>
-                                        <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOOD &amp; BEVERAGE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="ccc-hC-xFB">
+                                        <rect key="frame" x="9.9999999999999964" y="10" width="46.666666666666657" height="112"/>
+                                        <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -138,7 +138,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="design" translatesAutoresizingMaskIntoConstraints="NO" id="cvw-qG-vDC">
-                                <rect key="frame" x="216.33333333333334" y="10" width="30" height="132"/>
+                                <rect key="frame" x="232.33333333333334" y="10" width="30.000000000000028" height="132"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="aGi-ve-8Rd"/>
                                 </constraints>
@@ -154,7 +154,7 @@
                             <constraint firstItem="sdf-ma-umb" firstAttribute="leading" secondItem="aoB-0n-ALH" secondAttribute="leading" constant="10" id="LVQ-A7-FYu"/>
                             <constraint firstItem="sdf-ma-umb" firstAttribute="top" secondItem="sfR-pv-GRh" secondAttribute="bottom" constant="15" id="M7D-UZ-b3j"/>
                             <constraint firstItem="cvw-qG-vDC" firstAttribute="leading" secondItem="sfR-pv-GRh" secondAttribute="trailing" id="Puz-kd-XE7"/>
-                            <constraint firstItem="Xq6-iz-TOh" firstAttribute="width" secondItem="sfR-pv-GRh" secondAttribute="width" multiplier="0.4" id="PvC-zV-uMY"/>
+                            <constraint firstItem="Xq6-iz-TOh" firstAttribute="width" secondItem="sfR-pv-GRh" secondAttribute="width" multiplier="0.3" id="PvC-zV-uMY"/>
                             <constraint firstItem="Xq6-iz-TOh" firstAttribute="centerY" secondItem="sfR-pv-GRh" secondAttribute="centerY" id="RAi-Cu-les"/>
                             <constraint firstAttribute="trailing" secondItem="Xq6-iz-TOh" secondAttribute="trailing" constant="10" id="Uc5-lr-E3s"/>
                             <constraint firstItem="cvw-qG-vDC" firstAttribute="centerY" secondItem="sfR-pv-GRh" secondAttribute="centerY" id="Xus-y7-2Iu"/>
