--- a/Woopons/CustomCells/RecentsCollectionCell.xib
+++ b/Woopons/CustomCells/RecentsCollectionCell.xib
@@ -27,23 +27,23 @@
                         <rect key="frame" x="5" y="5" width="305" height="177"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="efn-SD-pc9" customClass="RightCornerView" customModule="Woopons" customModuleProvider="target">
-                                <rect key="frame" x="10" y="5" width="182" height="115"/>
+                                <rect key="frame" x="10" y="5" width="196" height="115"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barcode" translatesAutoresizingMaskIntoConstraints="NO" id="dEO-e3-Aun">
-                                        <rect key="frame" x="15" y="42.666666666666664" width="152" height="29.999999999999993"/>
+                                        <rect key="frame" x="15" y="42.666666666666664" width="166" height="29.999999999999993"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="aYT-7L-pzg"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KFC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JOC-Aa-sJ0">
-                                        <rect key="frame" x="15" y="9.6666666666666679" width="152" height="23.000000000000004"/>
+                                        <rect key="frame" x="15" y="9.6666666666666679" width="166" height="23.000000000000004"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unlimited" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="apy-qm-YSm">
-                                        <rect key="frame" x="15" y="85" width="152" height="20"/>
+                                        <rect key="frame" x="15" y="85" width="166" height="20"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -64,11 +64,11 @@
                                 </constraints>
                             </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rdK-6f-bvL" customClass="RightCornerView" customModule="Woopons" customModuleProvider="target">
-                                <rect key="frame" x="222" y="5" width="73" height="115"/>
+                                <rect key="frame" x="236" y="5" width="59" height="115"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOOD &amp; BEVERAGE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GE-IO-7ar">
-                                        <rect key="frame" x="10" y="10" width="53" height="95"/>
-                                        <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOOD &amp; BEVERAGE" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6GE-IO-7ar">
+                                        <rect key="frame" x="10" y="10" width="39" height="95"/>
+                                        <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -96,7 +96,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="design" translatesAutoresizingMaskIntoConstraints="NO" id="KnM-dE-VND">
-                                <rect key="frame" x="192" y="5" width="30" height="115"/>
+                                <rect key="frame" x="206" y="5" width="30" height="115"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="AaC-hX-f32"/>
                                 </constraints>
@@ -145,7 +145,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rdK-6f-bvL" firstAttribute="width" secondItem="efn-SD-pc9" secondAttribute="width" multiplier="0.4" id="Adm-O6-2Sd"/>
+                            <constraint firstItem="rdK-6f-bvL" firstAttribute="width" secondItem="efn-SD-pc9" secondAttribute="width" multiplier="0.3" id="Adm-O6-2Sd"/>
                             <constraint firstItem="eDk-u4-HQb" firstAttribute="leading" secondItem="oDF-A7-Dj5" secondAttribute="leading" constant="10" id="EIM-q0-CeB"/>
                             <constraint firstAttribute="bottom" secondItem="m2T-PB-Bzg" secondAttribute="bottom" constant="10" id="GBU-51-RQ0"/>
                             <constraint firstAttribute="trailing" secondItem="m2T-PB-Bzg" secondAttribute="trailing" constant="10" id="N3f-ZA-Ksc"/>
