--- a/Woopons/Storyboards/Home.storyboard
+++ b/Woopons/Storyboards/Home.storyboard
@@ -222,7 +222,7 @@
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                    <real key="value" value="20"/>
+                                    <real key="value" value="4"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
@@ -247,7 +247,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pen-Zv-Y4K">
-                                <rect key="frame" x="20" y="80" width="335" height="160"/>
+                                <rect key="frame" x="20" y="20" width="335" height="160"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cKj-nl-46w">
                                         <rect key="frame" x="8" y="8" width="319" height="144"/>
@@ -280,7 +280,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNs-CV-EBT">
-                                <rect key="frame" x="20" y="280" width="335" height="40"/>
+                                <rect key="frame" x="20" y="220" width="335" height="40"/>
                                 <color key="backgroundColor" name="primaryRed"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3R2-YO-UD2"/>
@@ -303,10 +303,10 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="4o9-c5-AjE" firstAttribute="trailing" secondItem="Pen-Zv-Y4K" secondAttribute="trailing" constant="20" id="E8U-FK-hUP"/>
-                            <constraint firstItem="Pen-Zv-Y4K" firstAttribute="top" secondItem="qEQ-NP-3Qj" secondAttribute="top" constant="80" id="Kyr-Tp-SIe"/>
                             <constraint firstItem="cNs-CV-EBT" firstAttribute="leading" secondItem="4o9-c5-AjE" secondAttribute="leading" constant="20" id="a3b-bE-VZz"/>
                             <constraint firstItem="4o9-c5-AjE" firstAttribute="trailing" secondItem="cNs-CV-EBT" secondAttribute="trailing" constant="20" id="fbn-S3-fNu"/>
                             <constraint firstItem="Pen-Zv-Y4K" firstAttribute="leading" secondItem="4o9-c5-AjE" secondAttribute="leading" constant="20" id="uhh-yU-bMb"/>
+                            <constraint firstItem="Pen-Zv-Y4K" firstAttribute="top" secondItem="4o9-c5-AjE" secondAttribute="top" constant="20" id="vGR-DJ-Y4R"/>
                             <constraint firstItem="cNs-CV-EBT" firstAttribute="top" secondItem="Pen-Zv-Y4K" secondAttribute="bottom" constant="40" id="xTd-Vm-Yei"/>
                         </constraints>
                     </view>
