--- a/Woopons/CustomCells/ResetCouponTableCell.xib
+++ b/Woopons/CustomCells/ResetCouponTableCell.xib
@@ -18,11 +18,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="211" id="KGk-i7-Jjw" customClass="ResetCouponTableCell" customModule="Woopons" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="378" height="211"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ResetCouponTableCell" rowHeight="204" id="KGk-i7-Jjw" customClass="ResetCouponTableCell" customModule="Woopons" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="378" height="204"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="378" height="211"/>
+                <rect key="frame" x="0.0" y="0.0" width="378" height="204"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bq9-E8-YeM">
@@ -42,11 +42,13 @@
                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                 <color key="value" name="primaryRed"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8a-m4-c14">
-                        <rect key="frame" x="20" y="141" width="338" height="45"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8a-m4-c14">
+                        <rect key="frame" x="10" y="110" width="358" height="84"/>
                         <string key="text">Please note: Once clicked, this can not be reversed. Your 
 Woo-Pon will stay active for 60 seconds. Please only
  redeem at checkout with worker present."</string>
@@ -54,15 +56,38 @@ Woo-Pon will stay active for 60 seconds. Please only
                         <color key="textColor" name="black5"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nw4-wZ-Se1" customClass="MTSlideToOpenView" customModule="MTSlideToOpen">
+                        <rect key="frame" x="10" y="60" width="358" height="40"/>
+                        <color key="backgroundColor" name="textFieldBg"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="1zf-S0-n0b"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="z8a-m4-c14" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="9WC-pi-L1b"/>
+                    <constraint firstItem="z8a-m4-c14" firstAttribute="top" secondItem="nw4-wZ-Se1" secondAttribute="bottom" constant="10" id="QH7-y9-cs4"/>
+                    <constraint firstAttribute="bottom" secondItem="z8a-m4-c14" secondAttribute="bottom" constant="10" id="UVL-TW-zRm"/>
+                    <constraint firstAttribute="trailing" secondItem="z8a-m4-c14" secondAttribute="trailing" constant="10" id="Vew-6o-l0I"/>
+                    <constraint firstItem="nw4-wZ-Se1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="aE1-iu-yjg"/>
                     <constraint firstItem="bq9-E8-YeM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="chn-HN-RTj"/>
+                    <constraint firstItem="nw4-wZ-Se1" firstAttribute="top" secondItem="bq9-E8-YeM" secondAttribute="bottom" constant="10" id="gYQ-JF-RaR"/>
                     <constraint firstAttribute="trailing" secondItem="bq9-E8-YeM" secondAttribute="trailing" constant="10" id="mqg-YS-PBE"/>
+                    <constraint firstAttribute="trailing" secondItem="nw4-wZ-Se1" secondAttribute="trailing" constant="10" id="r3j-Wh-3m4"/>
                     <constraint firstItem="bq9-E8-YeM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="tBM-ma-5gM"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-25.954198473282442" y="78.521126760563391"/>
+            <connections>
+                <outlet property="removeButton" destination="bq9-E8-YeM" id="KBu-qY-7ph"/>
+                <outlet property="slider" destination="nw4-wZ-Se1" id="qFJ-2F-Vd2"/>
+            </connections>
+            <point key="canvasLocation" x="-25.954198473282442" y="75.352112676056336"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -71,6 +96,9 @@ Woo-Pon will stay active for 60 seconds. Please only
         </namedColor>
         <namedColor name="primaryRed">
             <color red="0.74901960784313726" green="0.11764705882352941" blue="0.1803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="textFieldBg">
+            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
