--- a/Woopons/CustomCells/RecentlyAddedTableCell.xib
+++ b/Woopons/CustomCells/RecentlyAddedTableCell.xib
@@ -84,7 +84,7 @@
                                     <constraint firstItem="ccc-hC-xFB" firstAttribute="centerX" secondItem="Xq6-iz-TOh" secondAttribute="centerX" id="eHk-ac-ZBA"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="sdf-ma-umb">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sdf-ma-umb">
                                 <rect key="frame" x="10" y="157" width="32" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="32" id="05y-fz-r0u"/>
@@ -205,7 +205,6 @@
         <image name="arrow-red" width="6" height="11"/>
         <image name="barcode" width="158" height="25"/>
         <image name="design" width="26" height="124"/>
-        <image name="food" width="398" height="169"/>
         <namedColor name="black5">
             <color red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
