--- a/Woopons/CustomCells/TrendingCollectionCell.xib
+++ b/Woopons/CustomCells/TrendingCollectionCell.xib
@@ -25,7 +25,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="347" height="94"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="cMq-7K-DpQ">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cMq-7K-DpQ">
                         <rect key="frame" x="0.0" y="0.0" width="347" height="94"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -123,7 +123,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="food" width="398" height="169"/>
         <image name="right-arrow" width="14" height="12"/>
         <namedColor name="black3">
             <color red="0.0" green="0.0" blue="0.0" alpha="0.30000001192092896" colorSpace="custom" customColorSpace="sRGB"/>
