--- a/Woopons/CustomCells/DescriptionTableCell.xib
+++ b/Woopons/CustomCells/DescriptionTableCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -29,9 +30,9 @@
                         <rect key="frame" x="10" y="5" width="529" height="120"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wf1-MC-fAE">
-                                <rect key="frame" x="15" y="15" width="170" height="90"/>
+                                <rect key="frame" x="15" y="15" width="160" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="170" id="Yex-EP-AvG"/>
+                                    <constraint firstAttribute="width" constant="160" id="Yex-EP-AvG"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -40,12 +41,12 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBf-pH-OB3">
-                                <rect key="frame" x="195" y="15" width="277" height="0.0"/>
+                                <rect key="frame" x="185" y="15" width="287" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="16"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3G-UC-qwC">
-                                <rect key="frame" x="195" y="39" width="0.0" height="0.0"/>
+                                <rect key="frame" x="185" y="39" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -59,7 +60,7 @@
                                 <buttonConfiguration key="configuration" style="plain" image="heart" title=" "/>
                             </button>
                             <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QdS-n1-LFM" customClass="CosmosView" customModule="Cosmos">
-                                <rect key="frame" x="195" y="15" width="50" height="14"/>
+                                <rect key="frame" x="185" y="15" width="50" height="14"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="JdJ-5i-67c"/>
